添加了评论

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="zixu" content="width=device-width, initial-scale=1.0" />
     <meta name="梓旭" content="width=device-width, initial-scale=1.0" />
     <title>梓旭</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js">
+       
+    </script>
   </body>
 </html>
